fix button width on mobile
This may need a rework, long button names aren't really readable now, but i
really didn't like how wrapping button text looked.

--- a/assets/css/pagination.scss
+++ b/assets/css/pagination.scss
@@ -52,6 +52,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  max-width: 85vw;
   font-size: 1rem;
   padding: 0;
   appearance: none;
